add getFoodsBySpecLocation
